unpackaged/main/default/objects/Service__c/fields/Current_Domain_Migration__c.field-meta.xml
<CustomField>
    <fullName>Current_Domain_Migration__c</fullName>
    <description>Used for SEO Migration</description>
    <inlineHelpText>This field indicates the domain submitted by the IM for SEO Migration</inlineHelpText>
    <label>Current Domain</label>
    <type>Url</type>
</CustomField>