unpackaged/main/default/objects/Service__c/fields/Dashboard_Log_In__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Log_In__c</fullName>
    <label>Dashboard Log In</label>
    <length>100</length>
    <type>Text</type>
</CustomField>