unpackaged/main/default/objects/Service__c/fields/Dashboard_Password__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Password__c</fullName>
    <label>Dashboard Password</label>
    <length>100</length>
    <type>Text</type>
</CustomField>