unpackaged/main/default/objects/Service__c/fields/Dashboard_to_make_edits__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_to_make_edits__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dashboard to make edits</label>
    <type>Checkbox</type>
</CustomField>