unpackaged/main/default/objects/Service__c/fields/Data_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Data_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Data Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Services1</relationshipName>
    <type>Lookup</type>
</CustomField>