unpackaged/main/default/objects/Service__c/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <label>Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IDX</fullName>
            </value>
            <value>
                <fullName>VOW</fullName>
            </value>
            <value>
                <fullName>BBO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>