unpackaged/main/default/objects/Service__c/fields/Design_Intake_Call__c.field-meta.xml
<CustomField>
    <fullName>Design_Intake_Call__c</fullName>
    <inlineHelpText>Date the design intake call is scheduled for</inlineHelpText>
    <label>Design Intake Call</label>
    <type>Date</type>
</CustomField>