unpackaged/main/default/objects/Service__c/fields/Design_Intake_Call_Status__c.field-meta.xml
<CustomField>
    <fullName>Design_Intake_Call_Status__c</fullName>
    <label>Design Intake Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduling</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Gathering Assets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>