unpackaged/main/default/objects/Service__c/fields/Design_Intake_Form__c.field-meta.xml
<CustomField>
    <fullName>Design_Intake_Form__c</fullName>
    <inlineHelpText>This field will contain a coda doc link.</inlineHelpText>
    <label>Design Intake Form</label>
    <length>150</length>
    <type>Text</type>
</CustomField>