unpackaged/main/default/objects/Service__c/fields/Design_Project_Associate__c.field-meta.xml
<CustomField>
    <fullName>Design_Project_Associate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Design Project Associate</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Services1Rkz</relationshipName>
    <type>Lookup</type>
</CustomField>