unpackaged/main/default/objects/Service__c/fields/Design_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Design_Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Design Project Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ServicesIHl4</relationshipName>
    <type>Lookup</type>
</CustomField>