unpackaged/main/default/objects/Service__c/fields/Design_quiz__c.field-meta.xml
<CustomField>
    <fullName>Design_quiz__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Design quiz</label>
    <referenceTo>Database__c</referenceTo>
    <relationshipLabel>Services</relationshipLabel>
    <relationshipName>Services</relationshipName>
    <type>Lookup</type>
</CustomField>