unpackaged/main/default/objects/Service__c/fields/Design_Refresh__c.field-meta.xml
<CustomField>
    <fullName>Design_Refresh__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Design Refresh</label>
    <type>Checkbox</type>
</CustomField>