unpackaged/main/default/objects/Service__c/fields/Design_Refresh_Level__c.field-meta.xml
<CustomField>
    <fullName>Design_Refresh_Level__c</fullName>
    <description>Part of Design Refresh project - no automation needed</description>
    <label>Design Refresh Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pro</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>