unpackaged/main/default/objects/Service__c/fields/Design_template1__c.field-meta.xml
<CustomField>
    <fullName>Design_template1__c</fullName>
    <label>Design template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Design_Template</valueSetName>
    </valueSet>
</CustomField>