unpackaged/main/default/objects/Service__c/fields/Design_Template__c.field-meta.xml
<CustomField>
    <fullName>Design_Template__c</fullName>
    <formula>text( Opportunity__r.Design_Template__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Design Template</label>
    <type>Text</type>
</CustomField>