unpackaged/main/default/objects/Service__c/fields/Discovery_Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Questionnaire__c</fullName>
    <label>Discovery Questionnaire</label>
    <type>Url</type>
</CustomField>