unpackaged/main/default/objects/Service__c/fields/Disruptor_Package__c.field-meta.xml
<CustomField>
    <fullName>Disruptor_Package__c</fullName>
    <formula>Text( Opportunity__r.Disruptor_Package__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disruptor Package</label>
    <type>Text</type>
</CustomField>