unpackaged/main/default/objects/Service__c/fields/Do_you_want_to_have_credit_instead__c.field-meta.xml
<CustomField>
    <fullName>Do_you_want_to_have_credit_instead__c</fullName>
    <label>Do you want to have credit instead?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>