unpackaged/main/default/objects/Service__c/fields/Domain_Authority__c.field-meta.xml
<CustomField>
    <fullName>Domain_Authority__c</fullName>
    <formula>Account__r.Domain_Authority__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Domain Authority</label>
    <type>Text</type>
</CustomField>