unpackaged/main/default/objects/Service__c/fields/Domain_Registration__c.field-meta.xml
<CustomField>
    <fullName>Domain_Registration__c</fullName>
    <label>Domain Registration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>