unpackaged/main/default/objects/Service__c/fields/Domain_Registration_Notes__c.field-meta.xml
<CustomField>
    <fullName>Domain_Registration_Notes__c</fullName>
    <label>Domain Registration Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>