unpackaged/main/default/objects/Service__c/fields/Domain_Registration_Username__c.field-meta.xml
<CustomField>
    <fullName>Domain_Registration_Username__c</fullName>
    <label>Domain Registration Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>