unpackaged/main/default/objects/Service__c/fields/Domain_to_be_used_for_this_property__c.field-meta.xml
<CustomField>
    <fullName>Domain_to_be_used_for_this_property__c</fullName>
    <label>Domain to be used for this property</label>
    <length>60</length>
    <type>Text</type>
</CustomField>