unpackaged/main/default/objects/Service__c/fields/Domain_URL__c.field-meta.xml
<CustomField>
    <fullName>Domain_URL__c</fullName>
    <label>Domain URL</label>
    <type>Url</type>
</CustomField>