unpackaged/main/default/objects/Service__c/fields/Downgrade_Reason__c.field-meta.xml
<CustomField>
    <fullName>Downgrade_Reason__c</fullName>
    <label>Downgrade Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
            <value>
                <fullName>Late Deliverables</fullName>
            </value>
            <value>
                <fullName>Content Quality</fullName>
            </value>
            <value>
                <fullName>Budget/Cost</fullName>
            </value>
            <value>
                <fullName>No ROI/Don&#39;t see value</fullName>
            </value>
            <value>
                <fullName>Personal Reasons</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Website/Other Service</fullName>
            </value>
            <value>
                <fullName>Non-renewal</fullName>
            </value>
            <value>
                <fullName>Wrong/Unmet Expectations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>