unpackaged/main/default/objects/Service__c/fields/DS_Task_Status__c.field-meta.xml
<CustomField>
    <fullName>DS_Task_Status__c</fullName>
    <label>DS Task Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Ready For QA</fullName>
            </value>
            <value>
                <fullName>QA In Progress</fullName>
            </value>
            <value>
                <fullName>Additional Revisions</fullName>
            </value>
            <value>
                <fullName>Revisions in progress</fullName>
            </value>
            <value>
                <fullName>Sent for Approval</fullName>
            </value>
            <value>
                <fullName>SFA Revisions</fullName>
            </value>
            <value>
                <fullName>SFA Revisions In Progress</fullName>
            </value>
            <value>
                <fullName>Waiting on HIC</fullName>
            </value>
            <value>
                <fullName>Waiting on DS</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
                <isActive>false</isActive>
                <label>Done</label>
            </value>
            <value>
                <fullName>Waiting on Logo</fullName>
                <isActive>false</isActive>
                <label>Waiting on Logo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>