unpackaged/main/default/objects/Service__c/fields/Edits__c.field-meta.xml
<CustomField>
    <fullName>Edits__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Edits</label>
    <type>Checkbox</type>
</CustomField>