unpackaged/main/default/objects/Service__c/fields/Email_Phone_correct_for_communication__c.field-meta.xml
<CustomField>
    <fullName>Email_Phone_correct_for_communication__c</fullName>
    <label>Email/Phone correct for communication?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Only email correct</fullName>
            </value>
            <value>
                <fullName>Only phone correct</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>