unpackaged/main/default/objects/Service__c/fields/Email_sent_to_OM__c.field-meta.xml
<CustomField>
    <fullName>Email_sent_to_OM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email sent to OM</label>
    <type>Checkbox</type>
</CustomField>