unpackaged/main/default/objects/Service__c/fields/Escalation__c.field-meta.xml
<CustomField>
    <fullName>Escalation__c</fullName>
    <label>Escalation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Launch</fullName>
            </value>
            <value>
                <fullName>Post-Launch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>