unpackaged/main/default/objects/Service__c/fields/Estimated_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Launch_Date__c</fullName>
    <description>Case Number: 00052129</description>
    <inlineHelpText>Please allow 5-7 business days for SEO Migration before submitting the site to Final QA.</inlineHelpText>
    <label>Estimated Launch Date</label>
    <type>Date</type>
</CustomField>