unpackaged/main/default/objects/Service__c/fields/Existing_website__c.field-meta.xml
<CustomField>
    <fullName>Existing_website__c</fullName>
    <formula>TEXT( Opportunity__r.Existing_website__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Existing website?</label>
    <type>Text</type>
</CustomField>