unpackaged/main/default/objects/Service__c/fields/Extension_Addendum__c.field-meta.xml
<CustomField>
    <fullName>Extension_Addendum__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extension Addendum</label>
    <type>Checkbox</type>
</CustomField>