unpackaged/main/default/objects/Service__c/fields/Extention_addendum__c.field-meta.xml
<CustomField>
    <fullName>Extention_addendum__c</fullName>
    <inlineHelpText>Has an extention addendum been sent to client?</inlineHelpText>
    <label>Extention addendum</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>