unpackaged/main/default/objects/Service__c/fields/Feedback_Round_Date__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Round_Date__c</fullName>
    <label>Feedback Round Date</label>
    <type>DateTime</type>
</CustomField>