unpackaged/main/default/objects/Service__c/fields/First_Calendar_Sent__c.field-meta.xml
<CustomField>
    <fullName>First_Calendar_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Calendar Sent</label>
    <type>Checkbox</type>
</CustomField>