unpackaged/main/default/objects/Service__c/fields/Freelancer__c.field-meta.xml
<CustomField>
    <fullName>Freelancer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Freelancer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ServicesHep3</relationshipName>
    <type>Lookup</type>
</CustomField>