unpackaged/main/default/objects/Service__c/fields/GainApp_Workspace__c.field-meta.xml
<CustomField>
    <fullName>GainApp_Workspace__c</fullName>
    <description>Case Number: 00012032</description>
    <label>GainApp Workspace</label>
    <type>Url</type>
</CustomField>