unpackaged/main/default/objects/Service__c/fields/GBP_1__c.field-meta.xml
<CustomField>
    <fullName>GBP_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GBP #1</label>
    <type>Checkbox</type>
</CustomField>