unpackaged/main/default/objects/Service__c/fields/GBP_4__c.field-meta.xml
<CustomField>
    <fullName>GBP_4__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GBP #4</label>
    <type>Checkbox</type>
</CustomField>