unpackaged/main/default/objects/Service__c/fields/GBP_Review_link__c.field-meta.xml
<CustomField>
    <fullName>GBP_Review_link__c</fullName>
    <formula>Account__r.GBP_Review_link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GBP Review link</label>
    <type>Text</type>
</CustomField>