unpackaged/main/default/objects/Service__c/fields/GBP_Status__c.field-meta.xml
<CustomField>
    <fullName>GBP_Status__c</fullName>
    <formula>TEXT(Account__r.GBP_Status3__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GBP Status</label>
    <type>Text</type>
</CustomField>