unpackaged/main/default/objects/Service__c/fields/Get_Paperwork_Started_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Get_Paperwork_Started_Date_Time__c</fullName>
    <label>Get Paperwork Started Date/Time</label>
    <type>DateTime</type>
</CustomField>