unpackaged/main/default/objects/Service__c/fields/Google_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Google_Campaign_ID__c</fullName>
    <label>Google Campaign ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>