unpackaged/main/default/objects/Service__c/fields/Google_Doc_Link__c.field-meta.xml
<CustomField>
    <fullName>Google_Doc_Link__c</fullName>
    <label>Google Doc Link</label>
    <type>Url</type>
</CustomField>