unpackaged/main/default/objects/Service__c/fields/GTM_Container_ID__c.field-meta.xml
<CustomField>
    <fullName>GTM_Container_ID__c</fullName>
    <label>GTM Container ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>