unpackaged/main/default/objects/Service__c/fields/Handoff_Rating_Reason__c.field-meta.xml
<CustomField>
    <fullName>Handoff_Rating_Reason__c</fullName>
    <label>Handoff Rating Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>AE_Handoff_Rating__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No notes</fullName>
            </value>
            <value>
                <fullName>Notes not helpful</fullName>
            </value>
            <value>
                <fullName>Incorrect domain information</fullName>
            </value>
            <value>
                <fullName>No domain information</fullName>
            </value>
            <value>
                <fullName>No template selected</fullName>
            </value>
            <value>
                <fullName>Escalation due to sales overselling or misunderstanding</fullName>
            </value>
            <value>
                <fullName>No preferred communication input</fullName>
            </value>
            <value>
                <fullName>No A la Carte items noted on salesforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>