unpackaged/main/default/objects/Service__c/fields/Has_MLS_Service__c.field-meta.xml
<CustomField>
    <fullName>Has_MLS_Service__c</fullName>
    <formula>IF( ISPICKVAL( Opportunity__r.MLS_Board__c , &quot;None Selected&quot;)  , FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has MLS Service?</label>
    <type>Checkbox</type>
</CustomField>