unpackaged/main/default/objects/Service__c/fields/Has_the_SEO_migration_been_completed__c.field-meta.xml
<CustomField>
    <fullName>Has_the_SEO_migration_been_completed__c</fullName>
    <label>Has the SEO Migration Been Completed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Needed - does not meet the threshold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>