unpackaged/main/default/objects/Service__c/fields/Header_Image_Curator__c.field-meta.xml
<CustomField>
    <fullName>Header_Image_Curator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Header Image Curator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Services2</relationshipName>
    <type>Lookup</type>
</CustomField>