unpackaged/main/default/objects/Service__c/fields/Hubspot_Deal_ID__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_Deal_ID__c</fullName>
    <externalId>true</externalId>
    <label>Hubspot Deal ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>