unpackaged/main/default/objects/Service__c/fields/Ideations_Completed__c.field-meta.xml
<CustomField>
    <fullName>Ideations_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ideations Completed</label>
    <type>Checkbox</type>
</CustomField>