unpackaged/main/default/objects/Service__c/fields/IDX_Services_MLS_Created__c.field-meta.xml
<CustomField>
    <fullName>IDX_Services_MLS_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IDX Services MLS Created</label>
    <type>Checkbox</type>
</CustomField>