unpackaged/main/default/objects/Service__c/fields/IM__c.field-meta.xml
<CustomField>
    <fullName>IM__c</fullName>
    <formula>IF( ISBLANK( Implementation_Manager__c ) ,  Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName , Account__r.Implementation_Manager__r.FirstName &amp; &quot; &quot; &amp; Account__r.Implementation_Manager__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IM</label>
    <type>Text</type>
</CustomField>