unpackaged/main/default/objects/Service__c/fields/IM_Profile__c.field-meta.xml
<CustomField>
    <fullName>IM_Profile__c</fullName>
    <formula>Account__r.Implementation_Manager__r.Role_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IM Profile</label>
    <type>Text</type>
</CustomField>