unpackaged/main/default/objects/Service__c/fields/IM_Title__c.field-meta.xml
<CustomField>
    <fullName>IM_Title__c</fullName>
    <formula>Account__r.Implementation_Manager__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IM Title</label>
    <type>Text</type>
</CustomField>