unpackaged/main/default/objects/Service__c/fields/Implementation_Manager__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Manager__c</fullName>
    <formula>Account__r.Implementation_Manager__r.FirstName &amp; &quot; &quot; &amp;  Account__r.Implementation_Manager__r.LastName</formula>
    <label>Onboarding Manager</label>
    <type>Text</type>
</CustomField>