unpackaged/main/default/objects/Service__c/fields/In_App_Email__c.field-meta.xml
<CustomField>
    <fullName>In_App_Email__c</fullName>
    <formula>IF(
 OR(

 In_App_Status_1_BD__c = TODAY(),
 In_App_Status_2BD__c = TODAY(),
 In_App_Status_3_BD__c = TODAY()

 ), 
True, false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In-App Email?</label>
    <type>Checkbox</type>
</CustomField>