unpackaged/main/default/objects/Service__c/fields/In_App_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>In_App_Onboarding__c</fullName>
    <formula>TEXT(Opportunity__r.Beta_user__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In-App Onboarding</label>
    <type>Text</type>
</CustomField>