unpackaged/main/default/objects/Service__c/fields/In_App_Status_1_BD__c.field-meta.xml
<CustomField>
    <fullName>In_App_Status_1_BD__c</fullName>
    <formula>CASE( 
  MOD( Last_In_App_Status__c  - DATE( 1900, 1, 7 ), 7 ),
  5, Last_In_App_Status__c + 3,
  6, Last_In_App_Status__c + 2,
  Last_In_App_Status__c + 1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In-App Status 1 BD</label>
    <type>Date</type>
</CustomField>