unpackaged/main/default/objects/Service__c/fields/In_App_Status_3_BD__c.field-meta.xml
<CustomField>
    <fullName>In_App_Status_3_BD__c</fullName>
    <formula>CASE( 
  MOD( Last_In_App_Status__c  - DATE( 1900, 1, 7 ), 7 ),
  3, Last_In_App_Status__c + 5,
  4, Last_In_App_Status__c + 5,
  5, Last_In_App_Status__c + 5,
  6, Last_In_App_Status__c + 4,
  Last_In_App_Status__c + 3
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In-App Status 3 BD</label>
    <type>Date</type>
</CustomField>