unpackaged/main/default/objects/Service__c/fields/Intro_Made__c.field-meta.xml
<CustomField>
    <fullName>Intro_Made__c</fullName>
    <label>Intro Made?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>