unpackaged/main/default/objects/Service__c/fields/KWA_Account_information__c.field-meta.xml
<CustomField>
    <fullName>KWA_Account_information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KWA Account information</label>
    <type>Checkbox</type>
</CustomField>