unpackaged/main/default/objects/Service__c/fields/KWA_Link__c.field-meta.xml
<CustomField>
    <fullName>KWA_Link__c</fullName>
    <label>KWA Link</label>
    <type>Url</type>
</CustomField>