unpackaged/main/default/objects/Service__c/fields/Landing_Page_Link__c.field-meta.xml
<CustomField>
    <fullName>Landing_Page_Link__c</fullName>
    <label>Landing Page Link</label>
    <type>Url</type>
</CustomField>