unpackaged/main/default/objects/Service__c/fields/Landing_Page_Live__c.field-meta.xml
<CustomField>
    <fullName>Landing_Page_Live__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Landing Page Live</label>
    <type>Checkbox</type>
</CustomField>