unpackaged/main/default/objects/Service__c/fields/Landing_Page_Removed__c.field-meta.xml
<CustomField>
    <fullName>Landing_Page_Removed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Landing Page Removed</label>
    <type>Checkbox</type>
</CustomField>