unpackaged/main/default/objects/Service__c/fields/Landing_Page_Removed_Date__c.field-meta.xml
<CustomField>
    <fullName>Landing_Page_Removed_Date__c</fullName>
    <label>Landing Page Removed Date</label>
    <type>DateTime</type>
</CustomField>