unpackaged/main/default/objects/Service__c/fields/Last_Delighted_Sent__c.field-meta.xml
<CustomField>
    <fullName>Last_Delighted_Sent__c</fullName>
    <label>Last Delighted Sent</label>
    <type>Date</type>
</CustomField>