unpackaged/main/default/objects/Service__c/fields/Last_In_App_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_In_App_Status__c</fullName>
    <label>Last In-App Status</label>
    <type>Date</type>
</CustomField>